[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/Tiles/tile_0107.png" type="Texture" id=1]
[ext_resource path="res://assets/Tiles/tile_0106.png" type="Texture" id=2]
[ext_resource path="res://src/Enemy/Rat/Rat.gd" type="Script" id=3]
[ext_resource path="res://src/Enemy/Rat/Rat.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Objects/BigRock.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Fire/CircleFire.gd" type="Script" id=6]
[ext_resource path="res://src/Player/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Fire/CircleFire.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/crafting/items/Stone.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/crafting/items/Wood.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=11]
[ext_resource path="res://src/crafting/Collectable.gd" type="Script" id=12]

[sub_resource type="TileSet" id=2]
2/name = "tile_0106.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "tile_0107.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 8, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 0.1

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.0

[node name="Content" type="TileMap"]
z_index = 10
tile_set = SubResource( 2 )
cell_size = Vector2( 8, 8 )
cell_y_sort = true
format = 1

[node name="Player" type="RigidBody2D" parent="." groups=[
"player",
] instance=ExtResource( 7 )]
position = Vector2( 89.104, 57.7733 )
collision_mask = 5
mode = 2
physics_material_override = SubResource( 1 )
linear_damp = 10.0
script = ExtResource( 11 )

[node name="Stone" type="Area2D" parent="." instance=ExtResource( 9 )]
position = Vector2( 139.493, -0.0431309 )
collision_layer = 256
collision_mask = 0
script = ExtResource( 12 )
item_json = "res://src/crafting/items/stone.json"

[node name="Wood" type="Area2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 73, 3 )
collision_layer = 256
collision_mask = 0
script = ExtResource( 12 )
item_json = "res://src/crafting/items/wood.json"

[node name="CircleFire" type="Node2D" parent="." instance=ExtResource( 8 )]
position = Vector2( 127.039, 52.3164 )
script = ExtResource( 6 )

[node name="CircleFire2" type="Node2D" parent="." instance=ExtResource( 8 )]
position = Vector2( 621.689, -433.512 )
script = ExtResource( 6 )

[node name="Rat" type="RigidBody2D" parent="." groups=[
"enemies",
] instance=ExtResource( 4 )]
position = Vector2( 295.087, -50.1406 )
collision_layer = 2
collision_mask = 2
mode = 2
physics_material_override = SubResource( 3 )
can_sleep = false
script = ExtResource( 3 )

[node name="Rat2" type="RigidBody2D" parent="." groups=[
"enemies",
] instance=ExtResource( 4 )]
position = Vector2( 295.087, -50.1406 )
collision_layer = 2
collision_mask = 2
mode = 2
physics_material_override = SubResource( 3 )
can_sleep = false
script = ExtResource( 3 )

[node name="Rat3" type="RigidBody2D" parent="." groups=[
"enemies",
] instance=ExtResource( 4 )]
position = Vector2( 349.959, -23.768 )
collision_layer = 2
collision_mask = 2
mode = 2
physics_material_override = SubResource( 3 )
can_sleep = false
script = ExtResource( 3 )

[node name="Rat4" type="RigidBody2D" parent="." groups=[
"enemies",
] instance=ExtResource( 4 )]
position = Vector2( 423.972, -312.165 )
collision_layer = 2
collision_mask = 2
mode = 2
physics_material_override = SubResource( 3 )
can_sleep = false
script = ExtResource( 3 )

[node name="Rat5" type="RigidBody2D" parent="." groups=[
"enemies",
] instance=ExtResource( 4 )]
position = Vector2( 437.584, -253.465 )
collision_layer = 2
collision_mask = 2
mode = 2
physics_material_override = SubResource( 3 )
can_sleep = false
script = ExtResource( 3 )

[node name="Rat6" type="RigidBody2D" parent="." groups=[
"enemies",
] instance=ExtResource( 4 )]
position = Vector2( 380.585, -251.763 )
collision_layer = 2
collision_mask = 2
mode = 2
physics_material_override = SubResource( 3 )
can_sleep = false
script = ExtResource( 3 )

[node name="Rat7" type="RigidBody2D" parent="." groups=[
"enemies",
] instance=ExtResource( 4 )]
position = Vector2( 659.624, -115.221 )
collision_layer = 2
collision_mask = 2
mode = 2
physics_material_override = SubResource( 3 )
can_sleep = false
script = ExtResource( 3 )

[node name="BigRock" type="StaticBody2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 260.064, 58.4642 )
collision_layer = 4
collision_mask = 0

[connection signal="input_event" from="Stone" to="Stone" method="_on_Collectable_input_event"]
[connection signal="mouse_entered" from="Stone" to="Stone" method="_on_Collectable_mouse_entered"]
[connection signal="mouse_exited" from="Stone" to="Stone" method="_on_Collectable_mouse_exited"]
[connection signal="input_event" from="Wood" to="Wood" method="_on_Collectable_input_event"]
[connection signal="mouse_entered" from="Wood" to="Wood" method="_on_Collectable_mouse_entered"]
[connection signal="mouse_exited" from="Wood" to="Wood" method="_on_Collectable_mouse_exited"]
